--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:id="@+id/startService"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/start_music"
+            android:text="@string/start_music_foreground"
             app:layout_constraintBottom_toTopOf="@+id/endService"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -24,7 +24,7 @@
             android:id="@+id/endService"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/stop_music"
+            android:text="@string/stop_music_foreground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
