--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,11 @@
         tools:context=".MainActivity">
 
         <Button
-            android:id="@+id/startService"
+            android:id="@+id/startForegroundStartedService"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/start_music_foreground"
-            app:layout_constraintBottom_toTopOf="@+id/endService"
+            android:text="@string/start_music_started"
+            app:layout_constraintBottom_toTopOf="@id/endForegroundStartedService"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,15 +21,49 @@
             app:layout_constraintVertical_chainStyle="packed" />
 
         <Button
-            android:id="@+id/endService"
+            android:id="@+id/endForegroundStartedService"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/stop_music_foreground"
+            android:text="@string/stop_music_started"
+            app:layout_constraintBottom_toTopOf="@id/space"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/startForegroundStartedService" />
+        
+        <Space
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_height"
+            app:layout_constraintTop_toBottomOf="@id/endForegroundStartedService"
+            app:layout_constraintBottom_toTopOf="@id/startBoundService"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"/>
+
+        <Button
+            android:id="@+id/startBoundService"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start_music_bound"
+            app:layout_constraintBottom_toTopOf="@id/endBoundService"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/space" />
+
+        <Button
+            android:id="@+id/endBoundService"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stop_music_bound"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/startService" />
+            app:layout_constraintTop_toBottomOf="@id/startBoundService" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
